--- a/views/main.html
+++ b/views/main.html
@@ -138,7 +138,7 @@
       <div class="post-info">
         <div class="twit-author">#${info.id}</div>
         <div class="twit-tags">
-          <div class="hashtag-item">test1</div>
+          <div class="hashtag-item">${hash}</div>
         </div>
         <div class="twit-content">${info.post_title}</div>
       </div>
