--- a/views/join.html
+++ b/views/join.html
@@ -9,13 +9,15 @@
   <div class="joinContainer">
         <div class="joinTitle"><p class="joinTItleP">회원가입</p></div>     
         <div class="join-form-container">
-        <form id="join-form" action="/auth/join" method="post">
+        <form id="join-form" action="/auth/join" method="post" enctype="multipart/form-data">
           <div class="input-group">  
-              <div class="box">
-                <div class="profile-img"><img id="main-img" src="static/profile.png" style="width:200%; height:auto;"></div>
+              <div class="profile-img">
+                <!-- <img id="main-img" src="static/profile.png" style="width:200%; height:auto;" alt="미리보기">
+                <input id="img-url" type="hidden" name="url"> -->
+                <input type="file" name="img" placeholder="이미지를 입력하세요.">
               </div>
-              <label id="img-label" for="img" class>사진 업로드</label>
-              <input id="img" type="file" accept="image/*">
+              <!-- <label id="img-label" for="img">사진 업로드</label>
+              <input id="img" type="file" accept="image/*"> -->
           </div>
           <div class="input-group">     
             <input id="join-id" class="join-input" type="text" placeholder="아이디" name="id">
