[UPDATE] 1. profile img 연결 2. post.html : 댓글 버튼 css 수정, 댓글 등록일시 추가

--- a/views/main.html
+++ b/views/main.html
@@ -31,7 +31,11 @@
       <div class="post-profile">
         <div class="profile-section">
           <div>
-            <img class="pic" src="/static/profile.png">
+            {% if post.User.user_image %}
+              <img class="pic" src="{{post.User.user_image}}">  
+            {% else %}
+              <img class="pic" src="/static/profile.png">
+            {% endif %}
           </div>
           <div>
             <input type="hidden" value="{{post.User.id}}" class="twit-user-id">
