--- a/views/follow.html
+++ b/views/follow.html
@@ -11,8 +11,12 @@
       <input type="hidden" value="{{post.User.id}}" class="twit-user-id">
       <div class="post-profile">
         <div class="profile-section">
-          <div class="">
-            <img class="pic" src="/static/profile.png">
+          <div>
+            {% if post.User.user_image %}
+              <img class="pic" src="/{{post.User.user_image}}">  
+            {% else %}
+              <img class="pic" src="/static/profile.png">
+            {% endif %}
           </div>
           <div>
             <p>{{post.UserId}}</p>
