--- a/views/profile.html
+++ b/views/profile.html
@@ -6,7 +6,11 @@
   <div class="profileInfo">
     <div class="profileContainer">
     <div class="profilePic">
+      {% if user.user_image %}
+      <img id="profile-img" src="{{user.user_image}}" style="width:130px; height:130px;">
+      {% else %}
       <img id="profile-img" src="static/profile.png" style="width:130px; height:130px;">
+      {% endif %}
     </div></div>
     <div class="user-name-container">
       <div class="user-name">{{user.nick}}</div>
