[UPDATE] login.html 페이지 로그인유지 ->아이디유지 로 변경

--- a/views/login.html
+++ b/views/login.html
@@ -14,7 +14,7 @@
         <input id="password" type="password" name="password" required>
     </div>
     <div>
-        <label><input type="checkbox" name="로그인유지" value="loginCheck">로그인유지</label>
+        <label><input type="checkbox" name="아이디유지" value="loginIdCheck">아이디유지</label>
     </div>
     <button id="find_login" type="submit" class="btn">로그인</button>
     <br>
