--- a/views/follow.html
+++ b/views/follow.html
@@ -25,10 +25,18 @@
         </div>
       </div>
       <div class="post-info">
+        <div class="twit-authorTags">
         <div class="twit-author">#{{post.id}}</div>
-        <div class="twit-tags">
-          <div class="hashtag-item">test1</div>
+        <div class="twit-tags">        
+            {% for oneposthashtag in postHashtag %} 
+            {% for onehashtag in hashtag %}
+              {% if post.id==oneposthashtag.PostId and oneposthashtag.HashtagId==onehashtag.id %}              
+                  <div class="hashtag-item">{{onehashtag.title}}</div> 
+              {% endif %}
+            {% endfor %}
+           {% endfor %}          
         </div>
+      </div>
         <a href="/post/{{post.id}}/detail">
           <div class="twit-content">{{post.post_title}}</div>
         </a>
