--- a/views/post.html
+++ b/views/post.html
@@ -23,7 +23,7 @@
           </div>
         </a>
         <hr>
-        <div>
+        <div class="postDetailhastagContainer">
         <div class="hashtag-title">Tags</div>
         {% if hashtag.title%}
           <div class="hashtag-item">{{hashtag.title}}</div>
