--- a/views/profile.html
+++ b/views/profile.html
@@ -56,7 +56,8 @@
       <br>
       <div class="userscomments"style="position: relative;margin-top: 16px; text-align: center;">팔로워 / 팔로잉</div>
       <br>
-      <div class="followingerList"> <div class="followings half">    
+      <div class="followingerList"> 
+        <div class="followings half">    
       <h2>팔로잉 목록</h2>
       {% if user.Followings %}
         {% for following in user.Followings %}
