--- a/views/insert.html
+++ b/views/insert.html
@@ -1,6 +1,13 @@
 {% extends 'layout.html' %}
 
 {% block content %}
+<head>
+  <link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
+</link>
+<link rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/theme/monokai.min.css">
+</head>
     <div class="timeline">
       <h1>글쓰기</h1>
       <div class="twit" style="height:920px">
@@ -11,7 +18,8 @@
           </div>
           <div class="input-group">
             <label for="code_content">소스코드</label><br>
-            <textarea id="content" class="sourcecode" name="content" rows="35" cols="64"></textarea><br>
+            <!-- <textarea id="content" class="sourcecode" name="content" rows="35" cols="64"></textarea><br> -->
+            <textarea id="codemirror-textarea"></textarea>
           </div>
           <div class="input-group">
             <label for="question_content">설명</label><br>
@@ -52,6 +60,18 @@
 {% endblock %}
 
 {% block script %}
+  <!--add codemirror library  -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", function(){
+      var editor = CodeMirror.fromTextArea(document.getElementById("codemirror-textarea"), {
+        lineNumbers : true,
+        theme: 'monokai'
+      });
+      editor.setValue("console.log('hello');");
+      editor.setMode("javascript");
+    });
+  </script>
   <script>
     let selectedhash;
     if (document.getElementById('img')) {
