[UPDATE] insert.html에서 textarea name 설정

--- a/views/insert.html
+++ b/views/insert.html
@@ -19,7 +19,7 @@
           <div class="input-group">
             <label for="code_content">소스코드</label><br>
             <!-- <textarea id="content" class="sourcecode" name="content" rows="35" cols="64"></textarea><br> -->
-            <textarea id="codemirror-textarea"></textarea>
+            <textarea id="codemirror-textarea" name="content"></textarea>
           </div>
           <div class="input-group">
             <label for="question_content">설명</label><br>
