--- a/views/post.html
+++ b/views/post.html
@@ -24,6 +24,7 @@
             </div>
             <div>
               <p>{{post.UserId}}</p>
+              <p>{{post.user.user_image}}</p>
               <p>{{post.createdAt.toLocaleString('ko-KR')}}</p>
             </div>
             
@@ -38,16 +39,9 @@
         </div>
         <div class="input-group">
           <div class="post-title">{{post.post_title}}</div>
-          <!-- <div class="post-code-area"> -->
             <div class="title">코드</div>
-            <!-- <pre>
-            <code>
-              {{post.code_content}}
-            </code>
-            </pre> -->
             <textarea id="codemirror-textarea" name="content"></textarea>
-          <!-- </div> -->
-            {% if post.post_img %} <!-- 이미지는 있는경우만 보이게 셋팅-->
+            {% if post.post_img %}
               <div class="post-img"><img src="{{post.post_img}}" alt="섬네일"></div>
             {% endif %}
           <div class="post-content">{{post.question_content}}</div>
@@ -55,7 +49,7 @@
       </div>
       {% endif %}
     </div>
-  {% if user and user.id %} <!-- 로그인 했을때만 댓글기능 활성화-->
+  {% if user and user.id %} 
   <div class="twit">
       <form id="comment-form" action="/comment/insert" method="post">
         <input type="hidden" name="postId" value="{{post.id}}">
@@ -129,13 +123,22 @@
 {% block script %}
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.js"></script>
   <script>
+    var sourcecode = unescapeHtml(`{{post.code_content}}`); 
     document.addEventListener("DOMContentLoaded", function(){
       var editor = CodeMirror.fromTextArea(document.getElementById("codemirror-textarea"), {
         lineNumbers : true,
         theme: 'monokai',
-        readOnly: true
+        readOnly: true,
       });
-      editor.setValue(`{{post.code_content}}`);
+      editor.setValue(sourcecode);
     });
+    function unescapeHtml(str){
+      return str.replace(/&amp;/g, '&')
+                .replace(/&lt;/g, '<')
+                .replace(/&gt;/g, '>')
+                .replace(/&quot;/g, '"')
+                .replace(/&#039;/g, "'")
+                .replace(/&#39;/g, "'");
+    }
   </script>
 {% endblock %}
