--- a/views/login.html
+++ b/views/login.html
@@ -1,27 +1,42 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-  <div class="timeline">
-    <div>
-    <h1>로그인</h1>
-    <form id="login-form" action="/auth/login" method="post">
-    <div class="input-group">
-        <label for="id">아이디</label>
-        <input id="id" type="id" name="id" required autofocus>
-    </div>
-    <div class="input-group">
-        <label for="password">비밀번호</label>
-        <input id="password" type="password" name="password" required>
-    </div>
-    <div>
-        <label><input type="checkbox" name="아이디유지" value="loginIdCheck">아이디유지</label>
-    </div>
-    <button id="find_login" type="submit" class="btn">로그인</button>
-    <br>
-    <a>아이디찾기</a> | <a href="/join">회원가입</a>
-    </form>
-    </div>
+<head>
+  <link rel="stylesheet" href="/join.css">
+</head>
+<div class="timeline">
+  <div class="timelineContainer">
+    <div class="joinContainer">
+        <div class="joinTitle"><p class="joinTItleP">로그인</p></div>     
+        <div class="join-form-container">
+          <form id="login-form" action="/auth/login" method="post">
+            <br>
+            <div class="input-group">     
+              <input id="id" name="id" class="join-input" type="text" value= "{{saveId}}" placeholder="아이디" required autofocus>
+            </div>
+            <div class="input-group">
+              <input id="password" name="password" class="join-input" type="password" placeholder="비밀번호">
+            </div>
+            <div class="input-group">
+              {% if saveId %}
+                <input type="checkbox" name="saveId" value="checked" checked>아이디저장
+              {% else %}
+                <input type="checkbox" name="saveId" value="checked">아이디저장
+              {% endif %}
+            </div>
+            <div class="input-group">
+              <button id="join-btn" type="submit" class="btn">로그인</button>
+            </div>
+            <br>
+            <div class="input-group">
+              <a>아이디찾기</a> | <a href="/join">회원가입</a>
+            </div>
+          </form>
+        </div>
+    </div>   
   </div>
+</div>
+
 {% endblock %}
 
 {% block script %}
