--- a/views/profile.html
+++ b/views/profile.html
@@ -153,7 +153,7 @@
                   <div class="post-hashtag" style="position: relative; margin-top: -1px;">Q&A</div>
                   <div class="post-align" style="color: #8b8e90;">에 #{{post.id}} 게시물을 작성하였습니다.</div>
                   <br>
-                  <div style="color: #000000; position: relative;margin-left: -45px; margin-top: 7px">{{post.post_title}}</div>
+                  <div class="name" style="color: #000000; position: relative;margin-left: -45px; margin-top: 7px;">{{post.post_title}}</div>
                 </div>
               </div>
               <div class="post-profile" style="position: relative;margin-top: -45px;">
@@ -188,7 +188,7 @@
                       <div style="color:#262626;font-size:14px;font-weight: normal;">{{comment.created_at.toLocaleString('ko-KR')}}</div>
                     </div>
                     <br>
-                    <div style="color: #000000;">&nbsp;{{comment.Post.post_title}}</div>
+                    <div class="name" style="color: #000000;">&nbsp;{{comment.Post.post_title}}</div>
                   </div>
                 </div>
                 <div class="post-profile" style="position: relative;margin-top: -45px;">
