--- a/views/main.html
+++ b/views/main.html
@@ -63,7 +63,7 @@
       </div>
     </div>
         <a href="post/{{post.id}}/detail">
-          <div class="twit-content">{{post.post_title}}</div>
+          <div class="name_post" style="color: #000000; position: relative;margin-left: -45px; margin-top: 7px;">{{post.post_title}}</div>
         </a>
       </div>
     </div>
