--- a/public/join.css
+++ b/public/join.css
@@ -27,26 +27,24 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
     margin-bottom:5px;
     
   }
-  .input-group{
-      width:350px;
-     
-     display:flex;
-     justify-content: center;
-    }
-  .join-id{
-      
-  }
+.input-group{
+    width:350px;
+    
+    display:flex;
+    justify-content: center;
+}
+.checkId {
+    width: 10% !important;
+}
 input[type=password]{
     font-family: 'Courier New', Courier, monospace;
 }
 ::placeholder {
     font-family: "NanumSquare";
 }
+
 .joinContainer{
-    /* width:400px;
-    height:400px; */
     border:1px solid black;
-    
     display:flex;
     flex-direction:column;
     align-items:center;
@@ -54,7 +52,6 @@ input[type=password]{
 }
 .join-form-container{
     width:100%;
-    /* height:450px; */
     display:flex;
     flex-direction: column;
     justify-content: center;
@@ -78,28 +75,6 @@ input[type=password]{
 #join-btn{
     margin-top:5px;
     width:85%;
-}
-/* .btn{
-    display: inline-block;
-    padding: 0 5px;
-    text-decoration: none;
-    cursor: pointer;
-    border-radius: 4px;
-    background: crimson;
-    border: 1px solid silver;
-    color: white;
-    height: 40px;
-    line-height: 37px;
-    vertical-align: top;
-    font-size: 20px;
-    border-radius:10px;
-
-} */
-.joinTItleP{
-
-}
-.joinButtonContainer{
-    
 }
 .join-input{
     height:140px;
