[FIX] profile 닉네임 다를시 에러 수정

--- a/views/profile.html
+++ b/views/profile.html
@@ -159,7 +159,7 @@
               <div class="post-profile" style="position: relative;margin-top: -45px;">
                 <div class="profile-section" style="display:table-cell; vertical-align: bottom; text-align: right;">
                   <div>
-                    <p>{{post.createdAt.toLocaleString('ko-KR')}}<br>{{post.UserId}}</p>
+                    <p>{{post.createdAt.toLocaleString('ko-KR')}}<br>{{post.User.nick}}</p>
                   </div>
                 </div>
               </div>
