[UPDATE] 사용자의 profile id 보여주기

--- a/views/profile.html
+++ b/views/profile.html
@@ -14,7 +14,7 @@
     </div>
   </div>
     <div class="user-name-container">
-      <div class="user-name">{{user.nick}}</div>
+      <div class="user-name">{{user.nick}}<br><p style="font-weight: normal; font-size: 15px;">내 아이디 : {{user.id}}</p></div>
       <div>
       <input id="my-id" type="hidden" value="{{user.id}}">
       <a id="my-profile" href="/profileUpdate" class="btn widthbtn"><p>개인 정보 수정</p></a>
