[UPDATE] hashtag 라우터 get->post 변경

--- a/views/main.html
+++ b/views/main.html
@@ -116,7 +116,7 @@
 
   function filtering(hash){
       console.log("hash",hash)
-    axios.get(`/hashtag/${hash}`)
+    axios.post(`/hashtag`,{hash : hash})
     .then((res)=>{
      
       let temp=``;
