--- a/views/insert.html
+++ b/views/insert.html
@@ -11,7 +11,7 @@
     <div class="timeline">
       <h1>글쓰기</h1>
       <div class="twit" style="height:920px">
-        <form id="post-form" action="/post/insert" method="post">
+        <form id="post-form" action="/post/insert" method="post" enctype="multipart/form-data">
           <div class="input-group">
             <label for="post_title">제목</label><br>
             <input id="title" type="type" name="title" placeholder="제목 입력"><br>
@@ -50,7 +50,7 @@
            </div>
            
           <div class="input-group">
-              <button id="twit-btn" type="submit" class="btn">등록하기</button>
+              <button id="twit-btn" onclick="return checkValidation();" class="btn">등록하기</button>
           
           </div>
         </form>
@@ -112,6 +112,25 @@
     selectedhash=e.target.value;
     document.querySelector(".showSelectedhash").innerHTML=`${selectedhash}`;
     
+  }
+  function checkValidation(){
+    var form = document.getElementById("post-form");
+    var titleValue = document.getElementById("title").value;
+    var storyValue = document.getElementById("story").value;
+    var codeValue = document.getElementById("codemirror-textarea").value;
+    if(titleValue=="" && storyValue==""){
+      alert("내용을 입력하세요");
+      return false;
+    
+    }
+    if(titleValue!=="" && storyValue!==""){
+      form.submit();
+      return true;
+    }
+    
+    
+    
+ 
   }
   </script>
 
