[UPDATE] profile 글, 댓글 id->nick 수정

--- a/views/profile.html
+++ b/views/profile.html
@@ -194,7 +194,7 @@
                 <div class="post-profile" style="position: relative;margin-top: -45px;">
                   <div class="profile-section" style="display:table-cell; vertical-align: bottom; text-align: right;">
                     <div>
-                      <p><br>{{comment.Post.UserId}}</p>
+                      <p><br>{{comment.Post.User.nick}}</p>
                     </div>
                   </div>
                 </div>
